# mooplas

./: .dockerignore  .gitignore  Cargo.toml  README.md  flake.nix
.github/: copilot-instructions.md  secret_scanning.yml
.run/: Run All Game Tests.run.xml  Run All Networking Tests.run.xml  Run All Tests.run.xml  Run Local Game with Dev & Debug.run.xml  Run Local Game.run.xml  Run Matchbox Networking Tests.run.xml  Run Mooplas Local in Debug.run.xml  Run Mooplas Local with Dev & Debug.run.xml  Run Mooplas Local.run.xml  Run Mooplas Online in Debug.run.xml  Run Mooplas Online with Dev & Debug.run.xml  Run Mooplas Online.run.xml  Run Mooplas in Debug.run.xml  Run Mooplas.run.xml  Run Online Game with Dev & Debug.run.xml  Run Online Game with Matchbox, Dev & Debug.run.xml  Run Online Game with Renet, Dev & Debug.run.xml  Run Online Game.run.xml  Run Renet Networking Tests.run.xml  Run Signalling Server.run.xml  Run all tests.run.xml  Serve WASM.run.xml
.zed/: tasks.json
assets/ignore/: background.aseprite  logo.aseprite
mooplas_game/: .gitignore  Cargo.toml
mooplas_game/assets/ignore/: logo-big.aseprite  logo.aseprite
mooplas_game/scripts/: copy-assets.sh
mooplas_game/src/: animation.rs  app_state.rs  camera.rs  controls.rs  game_loop.rs  game_world.rs  initialisation.rs  main.rs  player.rs
mooplas_game/src/debug/: debug.rs  gizmos.rs  mod.rs
mooplas_game/src/online/: client.rs  interface.rs  mod.rs  networking.rs  online.rs  server.rs  shared_client.rs  shared_server.rs  structs.rs  utils.rs
mooplas_game/src/online/lib/: messages.rs  mod.rs  resources.rs  structs.rs
mooplas_game/src/online/matchbox/: client.rs  matchbox.rs  mod.rs  server.rs
mooplas_game/src/online/native/: client.rs  mod.rs  server.rs  structs.rs  utils.rs
mooplas_game/src/online/renet/: client.rs  mod.rs  renet.rs  server.rs
mooplas_game/src/online/wasm/: client.rs  mod.rs  server.rs  structs.rs
mooplas_game/src/shared/: components.rs  constants.rs  messages.rs  mod.rs  resources.rs  structs.rs  utils.rs
mooplas_game/src/ui/: enter_name_menu.rs  host_game_menu.rs  in_game_ui.rs  join_game_menu.rs  main_menu.rs  mod.rs  notification.rs  play_online_menu.rs  touch_controls_ui.rs  ui.rs
mooplas_game/src/ui/in_game_ui/: in_game_buttons.rs  in_game_local_ui.rs  in_game_online_ui.rs  in_game_ui.rs  mod.rs
mooplas_game/src/ui/shared/: mod.rs  structs.rs  ui_elements.rs  utils.rs
mooplas_game/www/public/: index.html  style.css
mooplas_networking/: Cargo.toml
mooplas_networking/src/: lib.rs
mooplas_networking/src/matchbox/: client.rs  host.rs  mod.rs  utils.rs
mooplas_networking/src/native/: client.rs  client_visualiser.rs  mod.rs  resources.rs  server.rs  server_visualiser.rs  utils.rs
mooplas_networking/src/renet/: client.rs  client_visualiser.rs  messages.rs  mod.rs  resources.rs  server.rs  server_visualiser.rs  utils.rs
mooplas_networking/src/shared/: codec.rs  messages.rs  mod.rs  resources.rs  structs.rs
mooplas_networking/src/wasm/: mod.rs
mooplas_networking_matchbox/: Cargo.toml  README.md
mooplas_networking_matchbox/src/: lib.rs
mooplas_networking_matchbox/src/matchbox/: client.rs  host.rs  mod.rs  server.rs  utils.rs
mooplas_networking_renet/: Cargo.toml
mooplas_networking_renet/src/: lib.rs
mooplas_networking_renet/src/renet/: client.rs  client_visualiser.rs  constants.rs  messages.rs  mod.rs  resources.rs  server.rs  server_visualiser.rs  utils.rs
mooplas_networking_shared/: Cargo.toml  README.md
mooplas_networking_shared/src/: lib.rs
mooplas_networking_shared/src/shared/: codec.rs  messages.rs  mod.rs  resources.rs  structs.rs
mooplas_networking_shared/src/wasm/: mod.rs
mooplas_signalling_server/: Cargo.toml  DEPLOY_MANUALLY.md  DEPLOY_WITH_OPEN_TOFU.md  Dockerfile  README.md
mooplas_signalling_server/deploy/: README.md  README_MANUAL.md  README_OPENTOFU.md  docker-compose.yml
mooplas_signalling_server/deploy/opentofu/: locals.tf  main.tf  mooplas.auto.tfvars.example  outputs.tf  user_data.sh.tftpl  variables.tf
mooplas_signalling_server/src/: error.rs  lib.rs  main.rs  room_aware_client_server.rs  server.rs
mooplas_signalling_server/tests/: health_check.rs  room_aware_signalling.rs  webrtc_integration.rs
mooplas_signalling_server/tests/fixtures/: tls-cert.pem  tls-key.pem
scripts/: clean-mooplas-files.ps1  clean-mooplas-files.sh  copy-assets.ps1  copy-assets.sh  serve.sh
src/: animation.rs  app_state.rs  app_states.rs  camera.rs  constants.rs  controls.rs  game_loop.rs  game_world.rs  gizmos.rs  gizmos_plugin.rs  in_game_ui.rs  initialisation.rs  loading.rs  main.rs  online_multiplayer.rs  player.rs  states.rs  touch_controls_ui.rs
src/debug/: controls.rs  gizmos.rs  mod.rs
src/online/: client.rs  interface.rs  mod.rs  server.rs
src/online/lib/: codec.rs  messages.rs  mod.rs  resources.rs  structs.rs  utils.rs
src/shared/: components.rs  constants.rs  messages.rs  mod.rs  resources.rs  shared.rs  structs.rs
src/ui/: host_game_menu.rs  in_game_ui.rs  join_game_menu.rs  main_menu.rs  mod.rs  play_online_menu.rs  shared.rs  touch_controls_ui.rs
src/ui/shared/: mod.rs  structs.rs  ui_elements.rs
www/public/: index.html  style.css
