[package]
name = "mooplas"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dependencies depending on Bevy version
bevy = { version = "0.18.0", features = ["wayland"] }
bevy-inspector-egui = { version = "0.36.0", optional = true }
bevy_ui_text_input = { version = "0.7.0", optional = true }
bevy_renet = { version = "4.0.0", optional = true }
renet_visualizer = { version = "2.0.0", optional = true }
avian2d = "0.5.0"

# Other dependencies
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", optional = true, features = ["alloc"] }
ureq = { version = "3.1.4", optional = true }

[features]
default = ["dev", "online"]
online = ["bevy_renet", "renet_visualizer", "postcard", "ureq", "bevy_ui_text_input"]
dev = [
  # Improve compile times for dev builds by linking Bevy as a dynamic library
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
  "bevy/bevy_ui_debug",
  # Improve error messages coming from Bevy
  "bevy/track_location",
  # Enable the Bevy inspector for debugging
  "bevy-inspector-egui"
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "debuginfo"

[profile.release-native]
inherits = "release"
opt-level = 3
strip = "none"