[workspace]
members = [
  "mooplas_game",
  "mooplas_networking_shared",
  "mooplas_networking_renet",
  "mooplas_networking_matchbox"
]
resolver = "2" # Important! Bevy/WGPU needs this!

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "debuginfo"

[profile.release-native]
inherits = "release"
opt-level = 3
strip = "none"