[package]
name = "mooplas_game"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dependencies depending on Bevy version
bevy = { version = "0.18.0", features = ["wayland"] }
bevy-inspector-egui = { version = "0.36.0", optional = true }
bevy_ui_text_input = { version = "0.7.0", optional = true }
avian2d = "0.5.0"

# Other dependencies
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
mooplas_networking = { path = "../mooplas_networking_shared", default-features = false }
mooplas_networking_renet = { path = "../mooplas_networking_renet", optional = true }
mooplas_networking_matchbox = { path = "../mooplas_networking_matchbox", optional = true }

[features]
default = ["dev", "online"]
online = []
online_renet = ["bevy_ui_text_input", "mooplas_networking_renet"]
online_matchbox = ["bevy_ui_text_input", "mooplas_networking_matchbox"]
dev = [
  # Improve compile times for dev builds by linking Bevy as a dynamic library
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
  "bevy/bevy_ui_debug",
  # Improve error messages coming from Bevy
  "bevy/track_location",
  # Enable the Bevy inspector for debugging
  "bevy-inspector-egui"
]