[package]
name = "mooplas_game"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dependencies depending on Bevy version
bevy = { version = "0.18.1", features = ["wayland"] }
bevy-inspector-egui = { version = "0.36.0", optional = true }
bevy_ui_text_input = { version = "0.7.0", optional = true }
avian2d = { version = "0.6.1" }

# Other dependencies
rand = { version = "0.10.1" }
serde = { version = "1.0.228", features = ["derive"] }
mooplas_networking = { path = "../mooplas_networking_shared", default-features = false }
mooplas_networking_renet = { path = "../mooplas_networking_renet", optional = true }
mooplas_networking_matchbox = { path = "../mooplas_networking_matchbox", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[features]
default = ["dev", "online"]
online = ["bevy_ui_text_input"]
online_renet = ["online", "mooplas_networking_renet"]
online_matchbox = ["online", "mooplas_networking_matchbox"]
dev = [
  # Improve compile times for dev builds by linking Bevy as a dynamic library
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
  "bevy/bevy_ui_debug",
  # Improve error messages coming from Bevy
  "bevy/track_location",
  # Enable the Bevy inspector for debugging
  "bevy-inspector-egui"
]