[package]
name = "mooplas_networking"
version = "0.1.0"
edition = "2024"

[dependencies]
# Other dependencies
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", optional = true, features = ["alloc"] }
ureq = { version = "3.1.4", optional = true }
wasm-bindgen = { version = "0.2.10", optional = true }
wasm-bindgen-futures = { version = "0.4.58", optional = true }
web-sys = { version = "0.3.38", features = [
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcConfiguration",
  "RtcIceServer",
  "RtcSessionDescriptionInit",
  "RtcDataChannel",
  "RtcDataChannelInit",
  "MessageEvent",
  "EventTarget",
], optional = true }
crossbeam-channel = { version = "0.5.15", optional = true }

[features]
default = ["dev", "online"]
online = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "crossbeam-channel", "postcard", "ureq",]
dev = []