[package]
name = "mooplas_networking"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dependencies linked to Bevy version
bevy = { version = "0.18.0", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_log",
] }
bevy_renet = { version = "4.0.0", optional = true }
renet_visualizer = { version = "2.0.0", optional = true }
bevy-inspector-egui = { version = "0.36.0", optional = true }

# Other dependencies
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
ureq = { version = "3.1.4", optional = true }
wasm-bindgen = { version = "0.2.10", optional = true }
wasm-bindgen-futures = { version = "0.4.58", optional = true }
web-sys = { version = "0.3.38", features = [
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcConfiguration",
  "RtcIceServer",
  "RtcSessionDescriptionInit",
  "RtcDataChannel",
  "RtcDataChannelInit",
  "MessageEvent",
  "EventTarget",
], optional = true }
crossbeam-channel = { version = "0.5.15", optional = true }

[features]
default = ["native"]
native = ["bevy_renet", "renet_visualizer", "ureq", "bevy-inspector-egui"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "crossbeam-channel"]