[package]
name = "mooplas_networking_matchbox"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dependencies linked to Bevy version
bevy = { version = "0.18.1", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_log",
] }

# Other dependencies
mooplas_networking = { path = "../mooplas_networking_shared", default-features = false }
rand = { version = "0.10.1", default-features = false, features = ["thread_rng"] }
url = { version = "2.5.8" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_matchbox = { version = "0.14", features = ["signaling"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_matchbox = { version = "0.14" }
getrandom = { version = "0.4", features = ["wasm_js"] }
