[package]
name = "mooplas_networking"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dependencies linked to Bevy version
bevy = { version = "0.18.0", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_log",
] }
bevy_renet = { version = "4.0.0", optional = true }

# Other dependencies
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
uuid = { version = "1.21.0", features = ["serde"] }

[features]
wasm = []
renet = ["bevy_renet"]
