[package]
name = "mooplas_networking"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dependencies linked to Bevy version
bevy = { version = "0.18.1", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_log",
] }
bevy_renet = { version = "4.0.1", optional = true }

# Other dependencies
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
url = { version = "2.5.8" }
uuid = { version = "1.22.0", features = ["serde", "js"] }

[features]
renet = ["bevy_renet"]
