[package]
name = "mooplas_networking"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dependencies linked to Bevy version
bevy = { version = "0.19.0", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_log",
] }

# Other dependencies
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
url = { version = "2.5.8" }
uuid = { version = "1.23.3", features = ["serde", "js"] }
