[package]
name = "mooplas_signalling_server"
version = "0.2.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["http1", "ws"] }
clap = { version = "4.6.1", features = ["derive"] }
futures = { version = "0.3.32" }
matchbox_protocol = { version = "0.14", features = ["json"] }
matchbox_signaling = { version = "0.14" }
rustls-pemfile = { version = "2.2.0" }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tokio-rustls = { version = "0.26.4" }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
matchbox_socket = { version = "0.14" }
reqwest = { version = "0.13.4", default-features = false, features = ["http2", "rustls"] }
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std"] }
serde_json = { version = "1.0.150" }
tokio-tungstenite = { version = "0.29.0" }
